--- a/UI/style.css
+++ b/UI/style.css
@@ -1,11 +1,85 @@
 *{
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: auto;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-    
+
+html{
+    width: 1140px;
+    background-color: #fff;
+    font-family: 'Roboto Mono', monospace;
+    color: #555;
+    font-size: 20px;
+    font-weight: 300;
+    text-rendering: optimizeLegibility;
+    background-image: url('house.jpg');
+    background-size: cover;
+}
+
+.container{
+    position: absolute;
+    margin: 0 auto 0 auto;
+    margin-left: 30%;
+    margin-right: auto;
+    margin-top: 10%;
+}
+
 h1{
-    font-size: 60px;
-    font-family: roboto;
+    position: relative;
+    color: purple;
+    font-stretch: ultra-expanded;
+    margin-left: -20%;
+    font-size: 90px;
+    margin-bottom: 40px;
 }
-    
+
+#signup{
+    position: absolute;
+    font-size: 30px;
+    margin-left: 42%;
+}
+
+h2{
+    margin-bottom: 20px;
+    font-display: bold;
+    color: purple;
+}
+
+#login{
+    position: absolute;
+    font-size: 25px;
+    margin-top: 60px;
+    margin-left: 31.5%;    
+}
+
+#login input[type = "text"], #login input[type = "password"]{
+    background: none;
+    border: 2px solid purple;
+    padding: 3px;
+}
+
+#login input[type = "submit"]{
+   padding: 4px;
+   color: white;
+   background-color: purple;
+   border-radius: 5px;
+   border-radius: 15px;
+}
+
+.container input[type = "text"], .container input[type = "text"], .container input[type = "password"]{
+    background: none;
+    border: 2px solid purple;
+    padding: 5px;
+    margin: 5px;
+}
+
+.container input[type = "submit"]{
+    margin-top: 2px;
+    padding: 4px;
+    color: white;
+    background-color: purple;
+    border-radius: 15px;
+    box-shadow: 20px;
+ }
+
+
