--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -6,8 +6,17 @@
 
 html{
     background-color: #fff;
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Roboto Mono';
 }
+
+/** Banner img**/
+
+.banner img{
+    height: 700px;
+    width: 100%;
+    background-image: cover;
+}
+
 /** Definitions **/
 
 
@@ -24,6 +33,8 @@ html{
 .bottom-depth{
     box-shadow: 2px 0 4px 0px black;
 }
+
+
 /*** Backgrounds **/
 .bg-primary {
     background-color: purple
@@ -31,15 +42,18 @@ html{
 .bg-white {
     background-color: #fff;
 }
+
+
 /*** Font Colours **/
 .fg-primary{
     color: purple
 }
 
+
 /** Utilities **/
 .padding-30{
     padding: 30px;
-}
+}                           
 .padding-30-top-bottom{
     padding:50px 0px 50px 0px;
 }
@@ -51,7 +65,26 @@ html{
     text-align: center;
 }
 
+
 /**** Header **/
+
+h1{
+    margin-top: 40px;
+    font-size: 60px;
+}
+
+P, h3{
+    word-spacing: 2px;
+    line-height: 40px;
+    font-size: 30px;
+    font-family:'permanent marker';
+}
+
+h2{
+    font-family: 'permanent marker';
+    color: purple;
+    font-size: 40px;
+}
 
 .wrapper {
     width: 100%;
@@ -63,14 +96,15 @@ html{
     line-height:100px;
     font-size: 30px;
     text-decoration: none;
+    font-family: 'permanent marker';
+    font-size: 40px;
 }
-.wrapper ul li {
+.wrapper ul li{
     float: right;
     list-style: none;
     line-height: 56px;
     margin-left: 20px;
     padding:22px;
-
 }
 .wrapper ul li.active{
     background: purple;
@@ -83,6 +117,7 @@ html{
     text-decoration: none;
 }
 
+
 /** Image responsiveness **/
 @media only screen and (max-width: 600px) {
     .card-image img{
@@ -90,6 +125,7 @@ html{
     }
   }
 
+/** Card design **/
   .card-container {
     width: 300px;
     background: #fff;
@@ -99,7 +135,7 @@ html{
   }
   
   .card-container:hover {
-        box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   }
   
   .card-image img {
@@ -121,6 +157,7 @@ html{
       padding: 15px 5px;
   }
 
+
   /*** GRID ***/
   .flex {
     display: flex;
@@ -135,6 +172,7 @@ html{
     flex-direction: column;
     }
 }
+
 
 /** login and signup **/
 
@@ -157,6 +195,7 @@ input[type=text]{
     box-sizing: border-box;
 }
 
+
 button{
     width: 100%;
     background-color: purple;
@@ -170,4 +209,54 @@ button{
     color: #fff;
     font-size: 15px;
     font-family: 'Roboto Mono', monospace;
+}
+
+
+/** Update page **/
+
+.update-card,
+.update-edit{
+    width: 30%;
+    height: 20%;
+}
+
+.update-card{
+    margin-top: 3%;
+    margin-bottom: 10%;
+}
+
+.update-container{
+    display: flex;
+    flex-direction: row;
+}
+
+.update-edit button{
+    color: white;
+    padding: 20px 200px;
+    font-size: 20px;
+}
+
+
+/** Agent-font **/
+
+.agent-font a{
+    color: white;
+}
+
+.banner-tag h1{
+    background: purple;
+    position: absolute;
+    left: 2%;
+    top: 70%;
+    color: white;
+    font-size: 120px;
+}
+
+/** Listings **/
+
+.listings-update ol li{
+    word-spacing: 2px;
+    margin: 30px;
+    font-family: 'Roboto mono';
+    font-size: 17px;
 }
