--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -150,11 +150,15 @@ h2{
   }
   
   .card-body-heading {
-      font-weight: 400;
-      color: #5f6368;
-      font-size: .95rem;
-      line-height: 25px;
-      padding: 15px 5px;
+    font-weight: 400;
+    color: #5f6368;
+    font-size: .95rem;
+    line-height: 25px;
+    padding: 15px 5px;
+  }
+
+  .card-body a{
+    text-decoration: none;
   }
 
 
