--- a/UI/css/style.css
+++ b/UI/css/style.css
@@ -179,15 +179,24 @@ h2{
   }
   
   .card-body-heading {
-    font-weight: 400;
+    font-weight: 200;
     color: #5f6368;
     font-size: .95rem;
     line-height: 25px;
     padding: 15px 5px;
   }
 
+  .card-body-heading-link{
+      margin-left: 50%;
+  }
+
   .card-body a{
     text-decoration: none;
+  }
+
+  .card-body h3{
+      font-weight: 100;
+      font-size: 15px;
   }
 
 
